--- a/webpack-spa-server/package.json
+++ b/webpack-spa-server/package.json
@@ -5,14 +5,20 @@
   "repository": "git@github.com:chaika-design/frontend-dev-server.git",
   "license": "MIT",
   "scripts": {
-    "build": "./node_modules/.bin/babel src/index.js -o build/script.js"
+    "build": "./node_modules/.bin/webpack --mode production",
+    "build:dev": "./node_modules/.bin/webpack --mode development"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5"
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4"
+    "@babel/polyfill": "^7.4.4",
+    "core-js": "3"
   }
 }
