--- a/webpack-spa-server/package.json
+++ b/webpack-spa-server/package.json
@@ -5,6 +5,8 @@
   "repository": "git@github.com:chaika-design/frontend-dev-server.git",
   "license": "MIT",
   "scripts": {
+    "start": "./node_modules/.bin/webpack-dev-server --mode development --hot --env.open",
+    "restart": "./node_modules/.bin/webpack-dev-server --mode development --hot",
     "build": "./node_modules/.bin/webpack --mode production",
     "build:dev": "./node_modules/.bin/webpack --mode development"
   },
